<resources>
    <string name="app_name">Lite</string>
    <string name="exchange">转换</string>
    <string name="update_time_test">上次更新时间:2018-12-12 12:12:12</string>
    <string name="update_time">上次更新时间:</string>
    <string name="query">查询</string>
    <string name="mail_query_hint">请输入快递单号</string>
    <string name="mail_company">快递公司:</string>
    <string name="action_settings">Settings</string>
    <string name="translate">翻译</string>


    <string name="app_key">39255</string>
    <string name="sign">7786aaa66c188649610f9fdba35c6890</string>
    
    <string name="l_translate">翻译</string>
    <string name="l_logistics">物流查询</string>
    <string name="l_exchange">货币转换</string>
    <string name="l_qr_code">二维码生成</string>
    <string name="l_color_picker">取色器</string>
    <string name="l_world_clock">时区换算</string>
    <string name="l_compass">指南针</string>
    <string name="l_random">随机数生成</string>
    <string name="l_decimal">进制转换</string>
</resources>
